hw06-01-wip-review

--- a/01-gallery.html
+++ b/01-gallery.html
@@ -15,5 +15,9 @@
     <ul class="gallery"></ul>
 
     <script src="js/01-gallery.js" type="module"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.0/dist/basicLightbox.min.css"
+    />
   </body>
 </html>
