--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -18,5 +18,8 @@
     <script src="
 https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.min.js
 "></script>
+    <script>
+      "https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.2/simple-lightbox.css";
+    </script>
   </body>
 </html>
